Location Modal Overflow Fix

--- a/css/pwmvp.webflow.css
+++ b/css/pwmvp.webflow.css
@@ -1305,7 +1305,6 @@ label {
   flex: 1;
   align-items: stretch;
   display: flex;
-  overflow: hidden;
 }
 
 .spot_detail {
@@ -1318,7 +1317,7 @@ label {
 .spot_cont {
   flex-direction: column;
   flex: 1;
-  justify-content: flex-end;
+  justify-content: flex-start;
   display: flex;
   overflow: auto;
 }
